--- a/.github/workflows/alerta.yml
+++ b/.github/workflows/alerta.yml
@@ -19,7 +19,7 @@ jobs:
       - name: Enviar notificacion
         run: |
           curl -X POST https://ntfy.sh/devops-itla \
-          -H "Title: Nuevo push realizado" \
+          -H "Title: Nuevo push realizado por felipe" \
           -H "Priority: default" \
           -d "Se subio nuevo codigo al repositorio"
 
